events: a channel command payload may carry nulls
Map.copyOf throws on a null value. The payload is a projected listing, and a
projection legitimately has nulls - an optional attribute the product does not
carry - so publishing any real product threw NullPointerException from the
compact constructor, before the command ever reached the outbox.

Still a defensive copy, via an unmodifiable LinkedHashMap, which also keeps
the projection's field order in the published JSON.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>